Fix gallery whitespace

--- a/wp-content/themes/chopshopmedia/assets/styles/modules/_gallery.scss
+++ b/wp-content/themes/chopshopmedia/assets/styles/modules/_gallery.scss
@@ -20,7 +20,7 @@
 
       border-right: 1px solid $black;
 
-      background-size: 102%;
+      background-size: 107%;
       background-position: center;
       background-repeat: no-repeat;
 
